force-app/main/default/objects/Source_of_Wealth_Real_Estate__c/Source_of_Wealth_Real_Estate__c.object-meta.xml
<CustomObject>
    <label>Source of Wealth Real Estate</label>
    <nameField>
        <displayFormat>SOWRE-{00000000}</displayFormat>
        <label>Source of Wealth Real Estate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source of Wealth Real Estates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>