force-app/main/default/objects/Source_of_Wealth_Real_Estate__c/fields/Average_Annual_Rental_income_When_Owned__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_Rental_income_When_Owned__c</fullName>
    <label>Average Annual Rental income When Owned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>