force-app/main/default/objects/Source_of_Wealth_Real_Estate__c/fields/Current_Loan_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Value__c</fullName>
    <label>Current Loan Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>