force-app/main/default/objects/Source_of_Wealth_Real_Estate__c/fields/Date_Bought__c.field-meta.xml
<CustomField>
    <fullName>Date_Bought__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Bought</label>
    <type>Date</type>
</CustomField>