force-app/main/default/objects/Source_of_Wealth_Real_Estate__c/fields/Date_Sold__c.field-meta.xml
<CustomField>
    <fullName>Date_Sold__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Sold</label>
    <type>Date</type>
</CustomField>