force-app/main/default/objects/Source_of_Wealth_Real_Estate__c/fields/Is_this_property_used_to_generate_rental__c.field-meta.xml
<CustomField>
    <fullName>Is_this_property_used_to_generate_rental__c</fullName>
    <description>Is this property used to generate rental income?</description>
    <label>Used to generate rental Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>