force-app/main/default/objects/Source_of_Wealth_Real_Estate__c/fields/Net_Sale_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Net_Sale_Proceeds__c</fullName>
    <label>Net Sale Proceeds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>