force-app/main/default/objects/Source_of_Wealth_Real_Estate__c/fields/Set_Value__c.field-meta.xml
<CustomField>
    <fullName>Set_Value__c</fullName>
    <label>Set Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>