force-app/main/default/objects/Source_of_Wealth_Real_Estate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Still Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>