force-app/main/default/objects/Source_of_Wealth_Real_Estate__c/listViews/Source_of_Wealth_Real_Estates.listView-meta.xml
<ListView>
    <fullName>Source_of_Wealth_Real_Estates</fullName>
    <columns>NAME</columns>
    <columns>Total__c</columns>
    <filterScope>Mine</filterScope>
    <label>Source of Wealth Real Estates</label>
</ListView>